--- a/build
+++ b/build
@@ -3,7 +3,7 @@
 set -e
 
 if [[ $1 == "--full" ]]; then
-    docker build -t wbond/pi-github-runner-base:latest -f Dockerfile-base .
+    docker build -t lclem/pi-github-runner-base:latest -f Dockerfile-base .
 fi
 
-docker build -t wbond/pi-github-runner:latest .
+docker build -t lclem/pi-github-runner:latest .
